signup and sign in and auth done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <app-navbar ></app-navbar>
 <div class="container">
-    <app-loading *ngIf="auth.isLoading$ | async; else loaded">loading</app-loading>
-    
-    <ng-template #loaded>
+
+    <!-- <ng-template #loaded> -->
         <router-outlet></router-outlet>
-    </ng-template>
+    <!-- </ng-template> -->
 
 </div>
