--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
 .container{
     justify-content: center;
-
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    align-self: center;
     padding: 10%;
 }
