--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -8,8 +8,15 @@
     color: white;
     align-items: center;
 }
+.nav{
+    display: flex;
+    justify-content: space-between;
+}
 .bars{
     display: none;
+}
+.brand{
+    display: flex;
 }
 .links-list{
     padding: 0;
@@ -28,6 +35,8 @@
 }
 .btn{
     border: none;
-    background-color: cadetblue;
+    background-color: rgb(19, 19, 19);
     padding: 10px;
+    color: white;
+    border-radius: 20px;
 }
