--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,20 @@
-<div class="navbar">
-    <div class="brand"><span>MyStore</span></div>
+<div class="navbar" *ngIf="!(logged$ | async) as logged">
+    <div class="brand"><span>MyStore</span>
+    <ul class="links-list" >
+        <li><a routerLink="">Home</a></li>
+        <li><a routerLink="/Shop">Shop</a></li> 
+    </ul>
+    </div>
     <div class="bars"></div>
-    <nav *ngIf="(auth.isAuthenticated$ | async) == true "  class="nav">
+    
 
-        <ul class="links-list">
+    <nav  class="nav" *ngIf="logged ">
+      
+        <ul class="links-list" >
             <li><a routerLink="/Account">Account</a></li>
             <li><a routerLink="/Cart">Cart</a></li> 
-            <li><button class="btn" (click)="logoutWithRedirect()" >Log out</button></li> 
+            <li><button class="btn"  (click)="logoutWithRedirect()" >Log out</button></li> 
         </ul>
     </nav>
-    <app-login *ngIf="(auth.isAuthenticated$ | async) == false "></app-login>
+    <button class="btn " routerLink="signin" *ngIf="logged">{{logged}}</button>
 </div>
