--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,8 +1,15 @@
-
 <div class="ctn">
     
-    <form class='form' #form="ngForm" (ngSubmit)="loginWithRedirect()">
-        <h1>Sign in</h1>
+    <form class='form' #form="ngForm" (ngSubmit)="signup()">
+        <h1>Sign Up</h1>
+        <div class="form-group">
+            <label for="first_name">First name:</label>
+        <input type="text" autocomplete="name" name="first_name" required  [(ngModel)]="first_name">
+        </div>
+        <div class="form-group">
+            <label for="last_name">Last name:</label>
+        <input type="text" autocomplete="family-name" name="last_name" required  [(ngModel)]="last_name">
+        </div>
         <div class="form-group">
             <label for="username">Username:</label>
         <input type="text" autocomplete="username" name="username" required  [(ngModel)]="username">
@@ -12,7 +19,6 @@
         <input type="password" autocomplete="new-password" name="password" required  [(ngModel)]="password">
         </div>
         <button class="btn" type="submit" [disabled]="form.invalid" >log in</button>
-        <button class="btn" type="button" (click)="signup()" >SignUp</button>
     </form>
 
 </div>
