--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <div class="navbar" >
     <div class="brand"><span>MyStore</span>
     <ul class="links-list" >
-        <li><a routerLink="">Home</a></li>
-        <li><a routerLink="/Shop">Shop</a></li> 
+        <li><a routerLink="">Shop</a></li> 
     </ul>
     </div>
     <div class="bars"></div>
