--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -18,7 +18,7 @@
             <label for="password">Password:</label>
         <input type="password" autocomplete="new-password" name="password" required  [(ngModel)]="password">
         </div>
-        <button class="btn" type="submit" [disabled]="form.invalid" >log in</button>
+        <button class="btn" type="submit" [disabled]="form.invalid" >Sign up</button>
     </form>
 
 </div>
