--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,15 @@
 
-<div class="ctn">
+<div class="ctn" >
     
     <form class='form' #form="ngForm" (ngSubmit)="loginWithRedirect()">
         <h1>Sign in</h1>
         <div class="form-group">
             <label for="username">Username:</label>
-        <input type="text" autocomplete="username" name="username" required  [(ngModel)]="username">
+        <input type="text"  name="username" required  [(ngModel)]="username">
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-        <input type="password" autocomplete="new-password" name="password" required  [(ngModel)]="password">
+        <input type="password"  name="password" required  [(ngModel)]="password">
         </div>
         <button class="btn" type="submit" [disabled]="form.invalid" >log in</button>
         <button class="btn" type="button" (click)="signup()" >SignUp</button>
